crates/language-v2/tests/src/fail/p0_parsing/code_string_literal/test.stderr
error: expected identifier
  --> src/fail/p0_parsing/code_string_literal/test.rs:17:83
   |
17 |                         parser_options = ParserOptions(inline = false, verbatim = "raw string not accepted")
   |                                                                                   ^^^^^^^^^^^^^^^^^^^^^^^^^
